[package]
name = "highjob-plugin"
version = "0.1.0"
authors = ["BadAtGames26"]
edition = "2021"

[package.metadata.skyline]
titleid = "0100a6301214e000" # Fire Emblem Engage

[lib]
crate-type = ["cdylib"]

[dependencies]
engage = { version = "0.2.0", git = "https://github.com/DivineDragonFanClub/engage.git" }
skyline = "0.2.0"
unity = { version = "0.2.0", git = "https://github.com/DivineDragonFanClub/unity.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
